// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SsrServer should be able to fetch standard context 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
  <title>Test</title>
  <script>window.context = {"pageDetails":{"template":"default-template","language":"en","title":"Test","config":{"message":"Hello world!"},"slots":{"main":[{"component":"paragraph-component","config":{"message":"foo"}}],"sidebar":[{"component":"paragraph-component","config":{"message":"test"}}]}}}</script>
</head>
<body>
  <div id="app"><main><h1>Hello world!</h1><p>message: Hello world!</p><!--[--><p>foo</p><!--]--><!--[--><p>test</p><!--]--></main></div>
  <script type="module" src="/src/entry-client.ts"></script>
</body>
</html>"
`;

exports[`SsrServer should handle static files 1`] = `
"body {
  margin: 0;
}"
`;

exports[`SsrServer should work 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
  <title>Home</title>
  <script>window.context = {"pageDetails":{"template":"default-template","language":"en","title":"Home","config":{"message":"Hello world!"},"slots":{"main":[],"sidebar":[]}}}</script>
</head>
<body>
  <div id="app"><main><h1>Hello world!</h1><p>message: Hello world!</p><!--[--><!--]--><!--[--><!--]--></main></div>
  <script type="module" src="/src/entry-client.ts"></script>
</body>
</html>"
`;
